# SkyCAT-SE

./: .gitignore  AI_STATEMENT.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
src/: CRC.py  CRC32.py  __main__.py  append.py  cache.py  config.py  defs.py  errors.py  extract.py  search.py  system.py  update.py  updater.py  util.py
src/resources/: vanilla_projects.txt
